<resources>
    <string name="app_name">Recipe Finder</string>
    <string name="main_text">What would you like to eat?</string>
    <string name="main_edit_text">Food name</string>
    <string name="base_api">https://api.spoonacular.com/recipes/search?</string>
    <string name="image_api">https://spoonacular.com/recipeImages/</string>
    <string name="api_key">dfb5a2eda1b34604bc94d67d21e6d43e</string>
    <string name="example_image_desc">Example food image</string>
    <string name="search_button_text">Search</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="navigate_back_text">Go back</string>
    <string name="content_description_navigate">Content Description</string>
    <string name="night_to_day_text">Night to Day</string>
    <string name="content_description_night_to_day">Turn the theme from night to day</string>
    <string name="settings_text">Settings</string>
    <string name="content_description_settings">Go to the settings menu</string>
    <string name="day_night_options_text">Day/Night options</string>
    <string name="number_hint_text">Number of recipes pr. search</string>
    <string name="number_label_text">Number of recipes</string>

    <string-array name="day_night_options">
        <item>Light Mode</item>
        <item>Dark Mode</item>
    </string-array>
</resources>
