<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    >

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/main_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_text"
            android:textSize="30sp"
            />

        <EditText
            android:id="@+id/main_text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/main_edit_text"
            android:inputType="text"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextSecondary"
            android:textSize="24sp"
            />

        <Button
            android:id="@+id/main_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_button_text"
            android:background="@color/colorAccent"
            />

        <ImageView
            android:id="@+id/main_image_view"
            android:layout_width="250sp"
            android:layout_height="250sp"
            android:contentDescription="@string/example_image_desc"
            />

    </LinearLayout>

</FrameLayout>