<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.Search"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:elevation="2dp"
            app:layout_constraintBottom_toTopOf="@id/main_image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/main_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_text"
                android:textSize="30sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/main_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/main_edit_text"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/main_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_button_text"
                android:elevation="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_text_edit" />

        </LinearLayout>

        <ImageView
            android:id="@+id/main_image_view"
            android:layout_width="250sp"
            android:layout_height="250sp"
            android:contentDescription="@string/example_image_desc"
            android:elevation="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>